CRUD Posts, Fix Seeder

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -4,3 +4,4 @@
 
 @import 'bootstrap';
 @import 'bootstrap-icons/font/bootstrap-icons.css';
+@import 'ckeditor5-premium-features/ckeditor5-premium-features.css';
